--- a/herostory-download.html
+++ b/herostory-download.html
@@ -77,6 +77,7 @@
             <p>如果您在游玩中发现BUG，或有游戏改善建议，请加QQ反映：3866325176</p>
             <p>最新版本：v1.0.0 | 更新日期：2025年2月</p>
             <p>支持系统：Windows 10/11 和 Android 9.0 及以上版本</p>
+			<p>原创：B站大佬 timothyqiu</p>
         </div>
 		<div class="preview">
             <h2>游戏画面</h2>
