--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 		<a href="tankwar-download.html" class="jump-btn">
             下载-重装战场
         </a>
+		<a href="onlinegame/index.html" class="jump-btn">
+            在线玩-重装战场
+        </a>
     </div>
 </body>
 </html>
